# vsock-http-samples

./: .gitignore  syscall-trace.txt
basic-tcp/client/: Cargo.toml
basic-tcp/client/src/: main.rs
basic-tcp/server/: Cargo.toml  Dockerfile  docker_cmd_wrap.sh
basic-tcp/server/src/: main.rs
measurements/: iperf_base_outputs.txt  iperf_blind_outputs.txt  iperf_proxy_outputs.txt
non-blind-server/client/src/: main.rs
non-blind-server/server/aws-nitro-enclaves-samples/vsock_sample/rs/: Dockerfile.client  Dockerfile.server  vsock-sample
rust-http/client/: Cargo.toml
rust-http/client/src/: main.rs
rust-http/server/: Cargo.toml
rust-http/server/src/: main.rs  routes.rs
rust-tcp-io-perf/: latency_out.txt
socat-tcp/: Dockerfile  Dockerfile.alpine  docker_cmd_wrap.sh  server  vsock-proxy.yaml
websockets/client/: Cargo.toml
websockets/client/src/: main.rs
websockets/server/: server.py
