[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]